<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Common -->
    <string name="button_text_next">Next</string>
    <string name="button_text_next_with_arrow">Next &gt;</string>
    <string name="button_text_lets_go">Let\'s go!</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_save">Save</string>
    <string name="error_input_required">Required!</string>

    <!-- Navigation Titles -->
    <string name="nav_title_login">Login</string>
    <string name="nav_title_welcome">Welcome</string>
    <string name="nav_title_instructions">Instructions</string>
    <string name="nav_title_shoe_list">Shoe Inventory</string>
    <string name="nav_title_shoe_detail">Add New Shoe</string>

    <!-- Menus -->
    <string name="menu_title_logout">Logout</string>

    <!-- Login screen -->
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="button_text_create_account">Create Account</string>
    <string name="button_text_login">Login</string>
    <string name="error_email_required">Email required!</string>
    <string name="error_password_required">Password required!</string>

    <!-- Welcome screen -->
    <string name="label_welcome_subtitle">Shoe Store Inventory</string>
    <string name="label_welcome_title">Welcome to</string>

    <!-- Instruction screen -->
    <string name="label_instruction_title">Features:</string>
    <string name="label_instruction_1">1. You can check shoe list in inventory</string>
    <string name="label_instruction_2">2. You can add new shoe to inventory</string>

    <!-- Shoe List screen -->
    <string name="label_empty_shoe_list">Inventory is Empty</string>
    <string name="label_empty_shoe_list_instruction">Click below \"+\" button and you can add new shoe to inventory</string>
    <string name="label_shoe_name_company">%1$s • %2$s</string>
    <string name="label_shoe_size">Size: %1$s</string>

    <!-- Shoe Detail screen -->
    <string name="hint_shoe_name">Shoe Name</string>
    <string name="hint_shoe_size">Shoe Size</string>
    <string name="hint_shoe_company_name">Company Name</string>
    <string name="hint_shoe_description">Description</string>
    <string name="error_shoe_size_invalid">Shoe size invalid!</string>

</resources>
