<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ui.shoedetail.ShoeDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <TextView
                style="@style/FormInputLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_shoe_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoe_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoe_name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/FormInputLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/hint_shoe_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoe_size_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoe_size_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.sizeString}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/FormInputLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/hint_shoe_company_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoe_company_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoe_company_name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.company}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/FormInputLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/hint_shoe_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoe_description_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoe_description_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="5"
                    android:text="@={viewModel.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_micro"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onCancelClicked()}"
                    android:text="@string/button_text_cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_micro"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onSaveClicked()}"
                    android:text="@string/button_text_save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>